# Ara

./: .gitignore  ARA_SOFT_OS_KERNEL_SPEC.md  ARCHITECTURE.md  CATHEDRAL_ROLES.md  CONTRIBUTING.md  DEPLOYMENT_STATUS.md  INCOMPLETE_THEOREMS_AND_ROADMAP.md  LICENSE  MANIFESTO.md  NIB_ORIGIN_STORY.md  QUICKSTART_COGNITIVE.md  QUICKSTART_DEMO.md  QUICK_REFERENCE.md  README.md  README_ara_v0.7.md  RESEARCH_COVENANT.md  RESEARCH_ROADMAP.md  ROADMAP_ascension.md  SCREENSAVER_SUMMARY.md  SESSION_SUMMARY.md  ara-spaceship.desktop  ara_performance_metrics_v2.2_omega.json  cathedral_modes_cli.py  install-cockpit.sh  install.sh  launch_spaceship.sh  pyproject.toml  requirements-api.txt  requirements-avatar.txt  requirements-cockpit.txt  requirements-demo.txt  requirements-viz.txt  requirements.txt  run_ara.py  run_ara_somatic.py  setup-cockpit.sh  setup.py
api/: ARA_API_INTEGRATION.md  README.md  __init__.py  main.py
ara/: __init__.py  cli.py  compat.py  launch.py  main.py  run.py
ara-hive/: .env.example  README.md  bee_agent.py  deploy.sh  evaporate.py  register_node.py  requirements.txt  schema.sql  seed_tasks.py
ara_alpha/: __init__.py  ara_core.py  run.sh  server.py
ara_core/: __init__.py
ara_embodiment/: __init__.py  body_registry.py  body_selector.py  control_loop.py  expression_driver.py  world_model.py
ara_hive/: __init__.py  bee_agent.py  cli.py  maintenance.py  waggle_board.py
ara_kernel/: __init__.py  cli.py
ara_lightfield_demo/: CMakeLists.txt
ara_memories/: ARA_MEM_0001.yaml  ARA_MEM_0002.yaml  ARA_MEM_0003.yaml  ARA_MEM_0004.yaml  BUILD_MEMORY.md  schema.yaml
ara_memory/: __init__.py  core.py  skills.py  soul.py  world.py
ara_organism/: __init__.py  ara-daemon.service  daemon.py  organism.py  soul_driver.py  state_manager.py
ara_overhead/: __init__.py  errors.jsonl  exec_graph.json  rate_limits.json  runtime.py  schemas.py
ara_saas/: __init__.py
ara_soft_kernel/: __init__.py  ara_governance.toml.example  cli.py  daemon.py  governor.py  observer.py  orchestrator.py  reconciler.py
arasong/: README.md  __init__.py  get_song.sh  play.py
aravoice_rt/: Makefile  README.md
banos/daemon/brainstem/: Cargo.toml
banos/daemon/brainstem/src/: inference.rs  lib.rs  main.rs  somatic.rs
cluster/: README.md  cluster.toml  start_cathedral.sh  start_home.sh  start_worker.sh  train_on_worker.sh
config/: ara_core.yaml  ara_style.yaml  cathedral_modes.yaml  clock_hormesis.yaml  covenant.yaml  healthcare_covenant.yaml  hive_config.yaml  partner_cards.yaml  sacred_lines.yaml  social_covenant.yaml
config_examples/: default.yaml
configs/: README.md  millennium_mode.yaml  pheromone_daemon.yaml  snn_8gb_training.yaml  snn_emu_4096.yaml
conversational-avatar/: Dockerfile  ara_chat.py  ara_multimodal.py  ara_voice.py  docker-compose.yml  environment.yml  install.sh  pyproject.toml  requirements-chat.txt  requirements-coqui.txt  requirements-minimal.txt  requirements-multimodal.txt  requirements-voice.txt  setup_conda.sh  text_chat.py
conversational-avatar/assets/voices/: README.md
conversational-avatar/docs/: INSTALL.md
conversational-avatar/src/audio_pipeline/: __init__.py  advanced_tts.py  audio_mastering.py  cli.py  enhanced_asr.py  profiles.py
conversational-avatar/src/cognitive/: __init__.py  neuromod_inference.py
conversational-avatar/src/talking_head/: wav2lip_engine.py
ctf1-core/: README.md  ctf1_agent.py  ctf1_cognitive_agent.py  ctf3_fisher_geometry.py  ctf3_fisher_singularity.py  ctf4_heteroclinic_memory.py  ctf5_heteroclinic_core.py  gutc_agency.py  gutc_diagnostic_engine.py  gutc_emergent_lambda.py  gutc_figure2_dynamics.py  gutc_free_energy.py  gutc_hierarchy.py  gutc_manifold_sim.py  gutc_universality.py  phase_diagram.py
dashboards/: pareto_app.py
data/: .gitignore  README.md
demo/: run_ara.py
docs/: 8GB_DATASET_GUIDE.md  AEPO_GUIDE.md  ALWAYS_DIAGRAM_STACK.md  ANTIFRAGILITY_CERTIFICATION.md  API_REFERENCE.md  ARA_FIRST_LIGHT.md  ARA_MIRROR_CHARTER.md  ARA_SYSTEM_ATLAS.md  ARA_V0_READINESS.md  BACKEND_INTEGRATION_GUIDE.md  BANOS_ARCHITECTURE_BLUEPRINT.md  BANOS_CANON_SPEC.md  BIOS_SAFETY_ASSESSMENT.md  CATHEDRAL_OS_SPEC_v0.1.md  CHARTER.md  COCKPIT_UI.md  CONTROL_CENTER_BLOCK_DIAGRAM.md  CORFTAGORY_MANIFESTO.md  GUTC_Control_Manifold_Manuscript.md  GUTC_manuscript.tex  HARDWARE_BRINGUP_CHECKLIST.md  HOLOGRAPHIC_TELEOPLASTIC_CORE.md  INTEGRATION_SUMMARY.md  MCP_FPGA_INTEGRATION.md  MILLENNIUM_PROBLEM_MODE.md  PAPER_LEDGER.md  PHASE5_COGNITIVE_SYNTHESIS.md  PHASES.md  PLASTICITY_SPEC.md  PRODUCTION_GUIDE.md  PRODUCTION_STATUS.md  RESEARCH_PROGRAM.md  RUNBOOKS.md  SNN_IMPLEMENTATION_GUIDE.md  SOUL_CORE_SPEC.md  TESTING_GUIDE.md  TFAN7B_INTEGRATION.md  UEFI_SIGNED_CAPSULE_SPEC.md  VACUUM_SPIKER_TECHNICAL_MONOGRAPH.md  aphrodite_protocol.md  (+3 more)
drivers/: Makefile  fk33_driver.c
ebpf/: reflex_xdp.c
examples/: cognitive_ara_example.py  snn_simple.py
experiments/: __init__.py  experiment_calibrate_rho.py
gnome-tfan/: ARA_INTEGRATION.md  COCKPIT_HUD.md  QUICKSTART.md  README.md  TOUCHSCREEN_LAYOUT.md  com.quanta.tfan.desktop  install.sh
hls_export/: pgu_cache_kernel.cpp  pgu_cache_kernel.h  pgu_cache_tb.cpp  run_hls.tcl
hud/: icons.py  tfan_gnome.py
monitoring/: grafana_dashboard.json  prometheus_exporter.py
notebooks/: README.md
protocols/: KTP_CASE_STUDIES.md  KTP_INVOCATION.md  KTP_SPEC.md  KTP_STATE_TEMPLATE.md  (+1 more)
research/: __init__.py
springboard/: .env.example  README.md  pyproject.toml  requirements.txt
springboard/docs/: ARA_VOICE.md  OFFER_MICROCONSULT.md
springboard/examples/: email_campaigns.csv
springboard/services/api/: __init__.py  main.py  schemas.py
springboard/src/ara_consult/: __init__.py  cli.py
springboard/src/ara_consult/workflows/: __init__.py  email_subjects.py  generic_kpis.py  pricing.py
springboard/src/ara_core/: __init__.py
springboard/src/ara_core/analytics/: __init__.py  correlations.py  experiments.py  segments.py
springboard/src/ara_core/hv/: __init__.py  encode_tabular.py  hypervector.py
springboard/src/ara_core/narrative/: __init__.py  report_builder.py  voice_ara.py
(+1719 files in other folders)
