[package]
name = "banos-brainstem"
version = "0.2.0"
edition = "2021"
authors = ["BANOS Project"]
description = "Diamond Core brainstem - prediction-centric control with active inference"
license = "GPL-3.0"
readme = "README.md"

[lib]
name = "brainstem"
path = "src/lib.rs"

[[bin]]
name = "banos-brainstem"
path = "src/main.rs"

[dependencies]
# Minimal but correct dependencies
ctrlc = { version = "3.4", features = ["termination"] }
memmap2 = "0.9"      # Memory-mapped file access
libc = "0.2"         # For O_SYNC and other low-level flags

[profile.release]
# Optimize for reliability and speed (not size - we need 1kHz)
opt-level = 3        # Maximum optimization
lto = true           # Link-time optimization
codegen-units = 1    # Better optimization
panic = "abort"      # No unwinding overhead

[profile.dev]
opt-level = 2        # Need some optimization even in dev for timing
